--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,6 @@
 POSTGRES_ADDR=postgres://username:password@host:5432/db_name
+POSTGRES_USER=username
+POSTGRES_PASSWORD=password
+POSTGRES_DB=db_name
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
